--- a/frontend/looksyk/src/styles.css
+++ b/frontend/looksyk/src/styles.css
@@ -62,3 +62,7 @@ iframe {
   height: 80vh;
   overflow: scroll;
 }
+
+h1 > a {
+  text-decoration: none;
+}
